subdir('avx')
subdir('cpudb')
subdir('decoder')
subdir('fpu')

sources = [
    '3dnow.cc',
    'access2.cc',
    'access.cc',
    'aes.cc',
    'apic.cc',
    'arith16.cc',
    'arith32.cc',
    'arith64.cc',
    'arith8.cc',
    'bcd.cc',
    'bit16.cc',
    'bit32.cc',
    'bit64.cc',
    'bit.cc',
    'bmi32.cc',
    'bmi64.cc',
    'call_far.cc',
    'cet.cc',
    'cmpccxadd32.cc',
    'cmpccxadd64.cc',
    'cpu.cc',
    'cpuid.cc',
    'crc32.cc',
    'crregs.cc',
    'ctrl_xfer16.cc',
    'ctrl_xfer32.cc',
    'ctrl_xfer64.cc',
    'ctrl_xfer_pro.cc',
    'data_xfer16.cc',
    'data_xfer32.cc',
    'data_xfer64.cc',
    'data_xfer8.cc',
    'debugstuff.cc',
    'event.cc',
    'exception.cc',
    'faststring.cc',
    'flag_ctrl.cc',
    'flag_ctrl_pro.cc',
    'fpu_emu.cc',
    'generic_cpuid.cc',
    'gf2.cc',
    'icache.cc',
    'init.cc',
    'io.cc',
    'iret.cc',
    'jmp_far.cc',
    'load.cc',
    'logical16.cc',
    'logical32.cc',
    'logical64.cc',
    'logical8.cc',
    'mmx.cc',
    'msr.cc',
    'mult16.cc',
    'mult32.cc',
    'mult64.cc',
    'mult8.cc',
    'mwait.cc',
    'paging.cc',
    'proc_ctrl.cc',
    'protect_ctrl.cc',
    'rdrand.cc',
    'ret_far.cc',
    'segment_ctrl.cc',
    'segment_ctrl_pro.cc',
    'sha.cc',
    'shift16.cc',
    'shift32.cc',
    'shift64.cc',
    'shift8.cc',
    'smm.cc',
    'soft_int.cc',
    'sse.cc',
    'sse_move.cc',
    'sse_pfp.cc',
    'sse_rcp.cc',
    'sse_string.cc',
    'stack16.cc',
    'stack32.cc',
    'stack64.cc',
    'stack.cc',
    'string.cc',
    'svm.cc',
    'tasking.cc',
    'vapic.cc',
    'vm8086.cc',
    'vmcs.cc',
    'vmexit.cc',
    'vmfunc.cc',
    'vmx.cc',
    'wide_int.cc',
    'xsave.cc',
]

bx_deps += static_library('cpu', sources, include_directories: [top_include])
