sources = [
    'e1000.cc',
    'eth_fbsd.cc',
    'eth_linux.cc',
    'eth_null.cc',
    'eth_slirp.cc',
    'eth_socket.cc',
    'eth_tap.cc',
    'eth_tuntap.cc',
    'eth_vde.cc',
    'eth_vnet.cc',
    'eth_win32.cc',
    'ne2k.cc',
    'netmod.cc',
    'netutil.cc',
    'pcipnic.cc'
]
bx_deps += static_library('network', sources, include_directories: [top_include, '..'])
