sources = [
    'scsi_device.cc',
    'uhci_core.cc',
    'usb_common.cc',
    'usb_ehci.cc',
    'usb_floppy.cc',
    'usb_hid.cc',
    'usb_hub.cc',
    'usb_msd.cc',
    'usb_ohci.cc',
    'usb_pcap.cc',
    'usb_printer.cc',
    'usb_uasp.cc',
    'usb_uhci.cc',
    'usb_xhci.cc'
]
bx_deps += static_library('usb', sources, include_directories: [top_include, '..'])
